fix some dark mode issue

--- a/pendidikan.css
+++ b/pendidikan.css
@@ -1,8 +1,3 @@
-.content-exp {
-  padding: 20px;
-  background-color: #f5f5f5;
-}
-
 .content-exp h2 {
   font-size: 24px;
   margin-bottom: 20px;
