--- a/skill.css
+++ b/skill.css
@@ -1,4 +1,5 @@
 .content-skill {
+  text-align: justify;
   position: relative;
   padding: 20px;
   width: 100%;
@@ -11,13 +12,7 @@
 .icon-skill {
   font-size: 50px;
 }
-/* .main-top i {
-  position: absolute;
-  right: 0;
-  margin: 10px 30px;
-  color: rgb(110, 109, 109);
-  cursor: pointer;
-} */
+
 .main .users {
   display: flex;
   width: 100%;
